--- a/lasvegas/packages.config
+++ b/lasvegas/packages.config
@@ -12,9 +12,13 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Nancy" version="1.4.3" targetFramework="net45" />
   <package id="Nancy.Owin" version="1.4.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="OwinHost" version="3.0.1" targetFramework="net45" />
+  <package id="Swashbuckle" version="5.4.0" targetFramework="net45" />
+  <package id="Swashbuckle.Core" version="5.4.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
